--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramiro Gallo | Home</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="info-container">
         <img src="" alt="">
         <h1>Ramiro Gallo</h1>
         <h2>Project links</h2>
+        <ul>
+            <li>
+                <a href="https://ramiro-gallo.github.io/Brunchaus-Bakery/">Brunchaus Bakery Website</a>
+            </li>
+            <li>
+                <a href="https://github.com/Ramiro-gallo/PreEntrega3-Gallo">Brunchaus Bakery Github repository</a>
+            </li>
+            <li>
+                <a href="https://ramiro-gallo.github.io/Calorie-calculator/">Calorie calculator Website</a>
+            </li>
+            <li>
+                <a href="https://github.com/Ramiro-gallo/Calorie-calculator">Calorie calculator Github repository</a>
+            </li>
     </section>
 </body>
 </html>
