--- a/index.html
+++ b/index.html
@@ -5,27 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramiro Gallo | Home</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="./assets/casa.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8898244d6b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="info-container">
-        <img src="" alt="">
+        <img id="logo" src="" alt="">
         <h1>Ramiro Gallo</h1>
+        <ul class="contact-buttons-container">
+            <li class="link-button">
+                <a class="contact-buttons" href="">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+            <li class="link-button">
+                <a class="contact-buttons" href="">
+                    <i class="fa-brands fa-square-github"></i>
+                </a>
+            </li>
+            <li class="link-button">
+                <a class="contact-buttons" href="">
+                    <i class="fa-brands fa-square-whatsapp"></i>
+                </a>
+            </li>
+        </ul>
         <h2>Project links</h2>
-        <ul>
-            <li>
-                <a href="https://ramiro-gallo.github.io/Brunchaus-Bakery/">Brunchaus Bakery Website</a>
+        <ul class="links-container">
+            <li class="links">
+                <a class="hyperlinks" href="https://ramiro-gallo.github.io/Brunchaus-Bakery/">Brunchaus Bakery Website</a>
             </li>
-            <li>
-                <a href="https://github.com/Ramiro-gallo/PreEntrega3-Gallo">Brunchaus Bakery Github repository</a>
+            <li class="links">
+                <a class="hyperlinks" href="https://github.com/Ramiro-gallo/PreEntrega3-Gallo">Brunchaus Bakery Github repository</a>
             </li>
-            <li>
-                <a href="https://ramiro-gallo.github.io/Calorie-calculator/">Calorie calculator Website</a>
+            <li class="links">
+                <a class="hyperlinks" href="https://ramiro-gallo.github.io/Calorie-calculator/">Calorie calculator Website</a>
             </li>
-            <li>
-                <a href="https://github.com/Ramiro-gallo/Calorie-calculator">Calorie calculator Github repository</a>
+            <li class="links">
+                <a class="hyperlinks" href="https://github.com/Ramiro-gallo/Calorie-calculator">Calorie calculator Github repository</a>
             </li>
     </section>
 </body>
