--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <h1>Ramiro Gallo</h1>
         <ul class="contact-buttons-container">
             <li class="link-button">
-                <a class="contact-buttons" href="">
+                <a class="contact-buttons" href="https://linkedin.com/in/ramiro-gallo-">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li class="link-button">
-                <a class="contact-buttons" href="">
+                <a class="contact-buttons" href="https://github.com/Ramiro-gallo">
                     <i class="fa-brands fa-square-github"></i>
                 </a>
             </li>
             <li class="link-button">
-                <a class="contact-buttons" href="">
+                <a class="contact-buttons" href="https://wa.link/ee5rmh">
                     <i class="fa-brands fa-square-whatsapp"></i>
                 </a>
             </li>
